# ClassCFinal

./: CMakeLists.txt  functions.c  functions.h  main.c  utils.c  utils.h
functions/calc/: calc.c  calc.h
functions/mode/: mode.c  mode.h
functions/moy/: moy.c  moy.h
functions/todo/: todo.c  todo.h
misc/: utils.c  utils.h
